2010-05-27  Joone Hur  <joone@kldp.org>

Reviewed by Xan Lopez.

        Add GtkVersioning.h in ScrollbackGtk.cpp for maintaining compatibility with the previous GTK+

        https://bugs.webkit.org/show_bug.cgi?id=39567

        * platform/gtk/ScrollbarGtk.cpp:

git-svn-id: svn://svn.chromium.org/blink/trunk@60288 bbb929c8-8fbe-4397-9dbb-9b2b20218538