third_party/WebKit/WebCore/platform/gtk/ScrollbarGtk.cpp
@@ -21,6 +21,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "config.h"
 #include "ScrollbarGtk.h"
 
+#include "GtkVersioning.h"
 #include "IntRect.h"
 #include "GraphicsContext.h"
 #include "FrameView.h"
